modified details agent prompt: capitalize helpful to emphasize

--- a/python/notebooks/vector_db.ipynb
+++ b/python/notebooks/vector_db.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "e365c708",
    "metadata": {},
    "outputs": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "e0980919",
    "metadata": {},
    "outputs": [],
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 12,
    "id": "b6d9b53e",
    "metadata": {},
    "outputs": [],
@@ -642,6 +642,124 @@
       ]
      },
      "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "results"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e9d6f26d",
+   "metadata": {},
+   "source": [
+    "# Test Embedding and Query again..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "b5aa4a7a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "text = \"Dark chocolate (Packaged Chocolate): Rich and indulgent dark chocolate in convenient packaged form, perfect for gifting or enjoying anytime. Made with premium cocoa for a smooth, intense flavor experience. -- Ingredients: ['Cocoa Mass', 'Sugar', 'Cocoa Butter', 'Vanilla Extract'] -- Price: 3.0 -- rating: 4.7\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "acaf7638",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(768,)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "embedding = model.encode(text)\n",
+    "embedding.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "c8354705",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "text = \"do you have packged chocolate?\"\n",
+    "embedding = model.encode(text).tolist()\n",
+    "\n",
+    "index = pc.Index(\"coffeeshop\")\n",
+    "\n",
+    "results = index.query(\n",
+    "    namespace=\"ns1\",\n",
+    "    vector=embedding,\n",
+    "    top_k=3,\n",
+    "    include_values=False,\n",
+    "    include_metadata=True\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "4c278605",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'matches': [{'id': 'Dark chocolate (Packaged Chocolate)',\n",
+       "              'metadata': {'text': 'Dark chocolate (Packaged Chocolate): Rich '\n",
+       "                                   'and indulgent dark chocolate in convenient '\n",
+       "                                   'packaged form, perfect for gifting or '\n",
+       "                                   'enjoying anytime. Made with premium cocoa '\n",
+       "                                   'for a smooth, intense flavor experience. '\n",
+       "                                   \"-- Ingredients: ['Cocoa Mass', 'Sugar', \"\n",
+       "                                   \"'Cocoa Butter', 'Vanilla Extract'] -- \"\n",
+       "                                   'Price: 3.0 -- rating: 4.7'},\n",
+       "              'score': 0.495185852,\n",
+       "              'values': []},\n",
+       "             {'id': 'Dark chocolate',\n",
+       "              'metadata': {'text': 'Dark chocolate: Rich and indulgent, our '\n",
+       "                                   'dark chocolate drinking chocolate is made '\n",
+       "                                   'with premium cocoa. This luxurious '\n",
+       "                                   'beverage is perfect for a cozy treat on a '\n",
+       "                                   'chilly day, bringing warmth and comfort '\n",
+       "                                   \"with every sip. -- Ingredients: ['Cocoa \"\n",
+       "                                   \"Powder', 'Sugar', 'Milk'] -- Price: 5.0 -- \"\n",
+       "                                   'rating: 4.7'},\n",
+       "              'score': 0.440551758,\n",
+       "              'values': []},\n",
+       "             {'id': 'Chocolate Chip Biscotti',\n",
+       "              'metadata': {'text': 'Chocolate Chip Biscotti: Crunchy and '\n",
+       "                                   'delightful, this chocolate chip biscotti '\n",
+       "                                   'is perfect for dipping in your coffee or '\n",
+       "                                   'enjoying on its own. Each bite offers a '\n",
+       "                                   'satisfying crunch and a burst of rich '\n",
+       "                                   'chocolate, making it a favorite for any '\n",
+       "                                   \"biscotti lover. -- Ingredients: ['Flour', \"\n",
+       "                                   \"'Sugar', 'Chocolate Chips', 'Eggs', \"\n",
+       "                                   \"'Almonds', 'Baking Powder'] -- Price: 2.5 \"\n",
+       "                                   '-- rating: 4.6'},\n",
+       "              'score': 0.391838074,\n",
+       "              'values': []}],\n",
+       " 'namespace': 'ns1',\n",
+       " 'usage': {'read_units': 1}}"
+      ]
+     },
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
