--- a/python/notebooks/vector_db.ipynb
+++ b/python/notebooks/vector_db.ipynb
@@ -2,19 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 38,
    "id": "e365c708",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/anaconda3/envs/coffeeshop/lib/python3.10/site-packages/pinecone/data/index.py:1: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from tqdm.autonotebook import tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from pinecone import Pinecone, ServerlessSpec\n",
     "from sentence_transformers import SentenceTransformer"
@@ -422,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 39,
    "id": "b6d9b53e",
    "metadata": {},
    "outputs": [],
@@ -655,23 +646,67 @@
    "id": "e9d6f26d",
    "metadata": {},
    "source": [
-    "# Test Embedding and Query again..."
+    "# Test Embedding with HuggingFace API"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 24,
+   "id": "244a5c79",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_id = 'sentence-transformers/all-mpnet-base-v2'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "8c5d957b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from dotenv import load_dotenv\n",
+    "from os import getenv\n",
+    "load_dotenv()\n",
+    "\n",
+    "hf_token = getenv(\"HUGGINGFACE_TOKEN\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
    "id": "b5aa4a7a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "text = \"Dark chocolate (Packaged Chocolate): Rich and indulgent dark chocolate in convenient packaged form, perfect for gifting or enjoying anytime. Made with premium cocoa for a smooth, intense flavor experience. -- Ingredients: ['Cocoa Mass', 'Sugar', 'Cocoa Butter', 'Vanilla Extract'] -- Price: 3.0 -- rating: 4.7\""
+    "text = \"What is the price of Latte?\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "acaf7638",
+   "execution_count": null,
+   "id": "ba3daf76",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from huggingface_hub import InferenceClient\n",
+    "\n",
+    "client = InferenceClient(\n",
+    "    provider=\"hf-inference\",\n",
+    "    api_key=hf_token\n",
+    ")\n",
+    "\n",
+    "result = client.feature_extraction(\n",
+    "    text,\n",
+    "    model=model_id\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "732bad78",
    "metadata": {},
    "outputs": [
     {
@@ -680,31 +715,27 @@
        "(768,)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "embedding = model.encode(text)\n",
-    "embedding.shape"
+    "result.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 40,
    "id": "c8354705",
    "metadata": {},
    "outputs": [],
    "source": [
-    "text = \"do you have packged chocolate?\"\n",
-    "embedding = model.encode(text).tolist()\n",
-    "\n",
     "index = pc.Index(\"coffeeshop\")\n",
     "\n",
     "results = index.query(\n",
     "    namespace=\"ns1\",\n",
-    "    vector=embedding,\n",
+    "    vector=result.tolist(),\n",
     "    top_k=3,\n",
     "    include_values=False,\n",
     "    include_metadata=True\n",
@@ -713,53 +744,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 41,
    "id": "4c278605",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'matches': [{'id': 'Dark chocolate (Packaged Chocolate)',\n",
-       "              'metadata': {'text': 'Dark chocolate (Packaged Chocolate): Rich '\n",
-       "                                   'and indulgent dark chocolate in convenient '\n",
-       "                                   'packaged form, perfect for gifting or '\n",
-       "                                   'enjoying anytime. Made with premium cocoa '\n",
-       "                                   'for a smooth, intense flavor experience. '\n",
-       "                                   \"-- Ingredients: ['Cocoa Mass', 'Sugar', \"\n",
-       "                                   \"'Cocoa Butter', 'Vanilla Extract'] -- \"\n",
-       "                                   'Price: 3.0 -- rating: 4.7'},\n",
-       "              'score': 0.495185852,\n",
+       "{'matches': [{'id': 'Latte',\n",
+       "              'metadata': {'text': 'Latte: Smooth and creamy, our latte '\n",
+       "                                   'combines rich espresso with velvety '\n",
+       "                                   'steamed milk, creating a perfect balance '\n",
+       "                                   'of flavor and texture. Enjoy it as a '\n",
+       "                                   'comforting treat any time of day, whether '\n",
+       "                                   \"you're starting your morning or taking a \"\n",
+       "                                   \"midday break. -- Ingredients: ['Espresso', \"\n",
+       "                                   \"'Steamed Milk', 'Milk Foam'] -- Price: \"\n",
+       "                                   '4.75 -- rating: 4.8'},\n",
+       "              'score': 0.634470046,\n",
        "              'values': []},\n",
-       "             {'id': 'Dark chocolate',\n",
-       "              'metadata': {'text': 'Dark chocolate: Rich and indulgent, our '\n",
-       "                                   'dark chocolate drinking chocolate is made '\n",
-       "                                   'with premium cocoa. This luxurious '\n",
-       "                                   'beverage is perfect for a cozy treat on a '\n",
-       "                                   'chilly day, bringing warmth and comfort '\n",
-       "                                   \"with every sip. -- Ingredients: ['Cocoa \"\n",
-       "                                   \"Powder', 'Sugar', 'Milk'] -- Price: 5.0 -- \"\n",
-       "                                   'rating: 4.7'},\n",
-       "              'score': 0.440551758,\n",
+       "             {'id': 'Menu Items',\n",
+       "              'metadata': {'text': 'Menu Items: Menu Items\\n'\n",
+       "                                   '\\n'\n",
+       "                                   'Cappuccino - $4.50\\n'\n",
+       "                                   'Jumbo Savory Scone - $3.25\\n'\n",
+       "                                   'Latte - $4.75\\n'\n",
+       "                                   'Chocolate Chip Biscotti - $2.50\\n'\n",
+       "                                   'Espresso shot - $2.00\\n'\n",
+       "                                   'Hazelnut Biscotti - $2.75\\n'\n",
+       "                                   'Chocolate Croissant - $3.75\\n'\n",
+       "                                   'Dark chocolate (Drinking Chocolate) - '\n",
+       "                                   '$5.00\\n'\n",
+       "                                   'Cranberry Scone - $3.50\\n'\n",
+       "                                   'Croissant - $3.25\\n'\n",
+       "                                   'Almond Croissant - $4.00\\n'\n",
+       "                                   'Ginger Biscotti - $2.50\\n'\n",
+       "                                   'Oatmeal Scone - $3.25\\n'\n",
+       "                                   'Ginger Scone - $3.50\\n'\n",
+       "                                   'Chocolate syrup - $1.50\\n'\n",
+       "                                   'Hazelnut syrup - $1.50\\n'\n",
+       "                                   'Carmel syrup - $1.50\\n'\n",
+       "                                   'Sugar Free Vanilla syrup - $1.50\\n'\n",
+       "                                   'Dark chocolate (Packaged Chocolate) - '\n",
+       "                                   '$3.00'},\n",
+       "              'score': 0.572350562,\n",
        "              'values': []},\n",
-       "             {'id': 'Chocolate Chip Biscotti',\n",
-       "              'metadata': {'text': 'Chocolate Chip Biscotti: Crunchy and '\n",
-       "                                   'delightful, this chocolate chip biscotti '\n",
-       "                                   'is perfect for dipping in your coffee or '\n",
-       "                                   'enjoying on its own. Each bite offers a '\n",
-       "                                   'satisfying crunch and a burst of rich '\n",
-       "                                   'chocolate, making it a favorite for any '\n",
-       "                                   \"biscotti lover. -- Ingredients: ['Flour', \"\n",
-       "                                   \"'Sugar', 'Chocolate Chips', 'Eggs', \"\n",
-       "                                   \"'Almonds', 'Baking Powder'] -- Price: 2.5 \"\n",
-       "                                   '-- rating: 4.6'},\n",
-       "              'score': 0.391838074,\n",
+       "             {'id': 'Cappuccino',\n",
+       "              'metadata': {'text': 'Cappuccino: A rich and creamy cappuccino '\n",
+       "                                   'made with freshly brewed espresso, steamed '\n",
+       "                                   'milk, and a frothy milk cap. This '\n",
+       "                                   'delightful drink offers a perfect balance '\n",
+       "                                   'of bold coffee flavor and smooth milk, '\n",
+       "                                   'making it an ideal companion for relaxing '\n",
+       "                                   'mornings or lively conversations. -- '\n",
+       "                                   \"Ingredients: ['Espresso', 'Steamed Milk', \"\n",
+       "                                   \"'Milk Foam'] -- Price: 4.5 -- rating: 4.7\"},\n",
+       "              'score': 0.454654723,\n",
        "              'values': []}],\n",
        " 'namespace': 'ns1',\n",
        " 'usage': {'read_units': 1}}"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
